Multiple poller support for task list. Next thing is to rework the single task list

--- a/controller/app/templates/tasks/results.html
+++ b/controller/app/templates/tasks/results.html
@@ -5,11 +5,8 @@
 
 <table border=1>
 {% for result in results %}
+    {{ result }}
     <tr>
-      {% for key, value in result.items() %}
-            <th>{{ key }}</th>
-            <td>{{ value }}</td>
-      {% endfor %}
     </tr>
 {% else %}
     <tr><td>No results found</td></tr>
