Minor tweaks to Task graph visuals

--- a/controller/app/templates/tasks/task.html
+++ b/controller/app/templates/tasks/task.html
@@ -44,8 +44,21 @@ var chart = c3.generate({
     },
     axis: {
         x: {
+            label: {
+                text: "date",
+                position: "outside-middle",
+            },
             count: 8
+        },
+        y: {
+            label: {
+                text: "ms",
+                position: "outside-middle",
+            }
         }
+    },
+    legend: {
+        position: "right"
     }
 });
 
