--- a/controller/app/templates/base.html
+++ b/controller/app/templates/base.html
@@ -1,44 +1,54 @@
 <!DOCTYPE html>
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <html>
-  <head>
-    {% if title %}
-    <title>netMon - {{ title }}</title>
-    {% else %}
-    <title>netMon</title>
-    {% endif %}
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="icon" href="/static/icons/favicon.ico">
 
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    {% block loadscripts %} {% endblock %}
-    <!-- 
-    <link rel="stylesheet" href="/static/css/bokeh-0.11.1.min.css" type="text/css" />
-    <script type="text/javascript" src="/static/js/bokeh-0.11.1.min.js"></script>
-    -->
-  </head>
+        {% if title %}
+            <title>netMon - {{ title }}</title>
+        {% else %}
+            <title>netMon</title>
+        {% endif %}
+
+        <!-- Bootstrap core CSS -->
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- Custom styles for this template -->
+        <link href="/static/css/base.css" rel="stylesheet">
+
+        <!-- d3 Graph library -->
+        <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
+        {% block loadscripts %}{% endblock %}
+
+    </head>
   <body>
-    <div>
-        <a href="/">Home</a>
-        <a href="/tasks">Tasks</a>
-        <a href="/inventory">Inventory</a>
-        <a href="/configuration">Configuration</a>
-    </div>
-    <hr>
-    {% with messages = get_flashed_messages() %}
-      {% if messages %}
-        <ul>
-        {% for message in messages %}
-            <li>{{ message }} </li>
-        {% endfor %}
-        </ul>
-      {% endif %}
-    {% endwith %}
-    {% block content %}{% endblock %}
+      <div class="wrapper">
+        {% include 'navigation.html' %}
+        <div id="page-wrapper">
+            <div class="container-fluid">
+                <div id="wrapper">
+                    {% block content %}{% endblock %}
+                </div>
+            </div>  <!-- /.container-fluid -->
+        </div>  <!-- /#page-wrapper -->
+    </div>  <!-- /#wrapper -->
+
   </body>
 </html>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="/static/js/jquery-1.12.2.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="/static/js/bootstrap.min.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="/static/js/ie10-viewport-bug-workaround.js"></script>
 
 {% block scripts %}{% endblock %}
