--- a/controller/app/templates/index.html
+++ b/controller/app/templates/index.html
@@ -1,7 +1,21 @@
-<!-- extend from base layout -->
 {% extends "base.html" %}
 {% block content %}
-    <h1>netMon</h1>
-    <p>A Network Monitoring solution supporting Ping, Traceroute, HTTP(s), DNS, SNMP and SSH Probes
-       visit https://git.eu.rabonet.com/network-management/netMon for details</p>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Area Chart</h3>
+            </div>
+            <div class="panel-body">
+                <div id="morris-area-chart"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-12">
+        <div><h3>Hello World</h3><br><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR></div>
+    </div>
+</div>
+<!-- /.row -->
 {% endblock %}
