--- a/controller/app/templates/tasks/navigation.html
+++ b/controller/app/templates/tasks/navigation.html
@@ -3,5 +3,4 @@
     <a href="/tasks/results">List all task results</a>
     <a href="/tasks/add">add a new task</a>
     <a href="/tasks/edit">edit an existing task</a>
-</div>
-<hr>
+</div><br>
