Tweaks to page headings

--- a/controller/app/templates/tasks/task.html
+++ b/controller/app/templates/tasks/task.html
@@ -8,13 +8,12 @@
 
 {% block content %}
 
-<div class="row">
-    <div class="col-lg-9">
-        <h2>Task details</h2>
-    </div>
-    <div class="col-lg-3" align="right">
+<div class="page-header">
+    <div class="btn-group-xs pull-right">
+        <a href="{{ url_for('tasks.get_task', task_id=tasks[0]._id) }}" class="btn btn-primary">Refresh</a>
         <a href="{{ url_for('tasks.delete_task', task_id=tasks[0]._id) }}" class="btn btn-danger">Delete</a>
     </div>
+    <h2>Task details</h2>
 </div>
 
 <div class="row">
