Basic handling of poller registration

--- a/controller/app/templates/navigation.html
+++ b/controller/app/templates/navigation.html
@@ -119,8 +119,8 @@
             <li  {%- if request.path == url_for('tasks.get_tasks') %} class="active" {% endif %}>
                 <a href="{{ url_for('tasks.get_tasks') }}"><i class="fa fa-fw fa-bar-chart-o"></i> Tasks</a>
             </li>
-            <li  {%- if request.path == url_for('pollers.home') %} class="active" {% endif %}>
-                <a href="{{ url_for('pollers.home') }}"><i class="fa fa-fw fa-bar-chart-o"></i> Pollers</a>
+            <li  {%- if request.path == url_for('pollers.get_pollers') %} class="active" {% endif %}>
+                <a href="{{ url_for('pollers.get_pollers') }}"><i class="fa fa-fw fa-bar-chart-o"></i> Pollers</a>
             </li>
             <li  {%- if request.path == url_for('configuration.home') %} class="active" {% endif %}>
                 <a href="{{ url_for('configuration.home') }}"><i class="fa fa-fw fa-bar-chart-o"></i> Configuration</a>
