--- a/controller/app/templates/pollers/pollers.html
+++ b/controller/app/templates/pollers/pollers.html
@@ -2,6 +2,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+
 <div class="page-header">
     <h2>All Pollers</h2>
 </div>
@@ -16,6 +17,8 @@
                 <th>Status</th>
                 <th>Online since</th>
                 <th>Last keepalive</th>
+                <th>keepalive interval (sec)</th>
+                <th></th>
             </tr>
             {% for poller_name, poller in pollers.items() %}
                 <tr>
@@ -31,6 +34,13 @@
                     </td>
                     <td>{{ poller.online_since }}</td>
                     <td>{{ poller.last_keepalive }}</td>
+                    <td>{{ poller.keepalive_interval }}</td>
+                    <td>
+                        <div class="btn-group-xs" role="group" aria-label="pollercontrol">
+                            <a href="#" class="btn btn-primary">details</a>
+                            <a href="{{ url_for('pollers.delete_poller', poller_name=poller.name) }}" class="btn btn-danger">X</a>
+                        </div>
+                    </td>
                 </tr>
             {% else %}
                 <tr><td colspan=6>No pollers found</td></tr>
