--- a/controller/app/templates/tasks/add.html
+++ b/controller/app/templates/tasks/add.html
@@ -110,6 +110,18 @@
     </div>
 </div>
 
+<div class="form-group  {% if form.pollers.errors %} has-error {% endif %}">
+    <div class="col-sm-2">
+        {{ form.pollers.label}}
+    </div>
+    <div class="col-sm-5">
+        {{ form.pollers }}
+    </div>
+    <div class="help-block col-sm-3">
+        {{ form.pollers.errors[0] }}
+    </div>
+</div>
+
 
 <div class="form-group">
     <div class="col-sm-2"></div>
