--- a/controller/app/templates/navigation.html
+++ b/controller/app/templates/navigation.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">netMon</a>
+        <a class="navbar-brand" href="/">netMon</a>
     </div>
     <!-- Top Menu Items -->
     <ul class="nav navbar-right top-nav">
