--- a/controller/app/templates/tasks/add.html
+++ b/controller/app/templates/tasks/add.html
@@ -38,6 +38,18 @@
     </div>
 </div>
 
+<div class="form-group  {% if form.description.errors %} has-error {% endif %}" id="description">
+    <div class="col-sm-2">
+        {{ form.description.label}}
+    </div>
+    <div class="col-sm-5">
+        {{ form.description(cols="50") }}
+    </div>
+    <div class="help-block col-sm-3">
+        {{ form.description.errors[0] }}
+    </div>
+</div>
+
 <div class="form-group  {% if form.if_index.errors %} has-error {% endif %}" id="if_index" style="display: none">
     <div class="col-sm-2">
         {{ form.if_index.label}}
