add task repeat now prefills the form

--- a/controller/app/templates/tasks/add.html
+++ b/controller/app/templates/tasks/add.html
@@ -8,6 +8,11 @@
 </div>
 {% endif %}
 
+{% if alert %}
+<div class="row">
+    <div class="alert alert-success">{{ alert }}</div>
+</div>
+{% endif %}
 
 <div class="row">
 <form action="{{ url_for('tasks.add_tasks') }}" method="POST" class="form-horizontal">
